--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1"
+  },
+  "devDependencies": {
+    "escape-html": "^1.0.3",
+    "jsonwebtoken": "^8.5.1"
   }
 }
