--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "escape": "^0.0.1",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
