--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "escape-html": "^1.0.3",
-    "jsonwebtoken": "^8.5.1"
+    "escape-html": "^1.0.3"
   }
 }
