--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "escape-html": "^1.0.3"
   },
   "devDependencies": {
-    "escape-html": "^1.0.3"
   }
 }
